refactor: Rewrite deprecated-for-removal code
Replace all `new <? extends Number>(value)` with `<? extends Number>.valueOf(value)`.