@@ -312,22 +312,22 @@ public abstract class JDBC3PreparedStatement extends CorePreparedStatement {
 
     /** @see java.sql.PreparedStatement#setDouble(int, double) */
     public void setDouble(int pos, double value) throws SQLException {
-        batch(pos, new Double(value));
+        batch(pos, Double.valueOf(value));
     }
 
     /** @see java.sql.PreparedStatement#setFloat(int, float) */
     public void setFloat(int pos, float value) throws SQLException {
-        batch(pos, new Float(value));
+        batch(pos, Float.valueOf(value));
     }
 
     /** @see java.sql.PreparedStatement#setInt(int, int) */
     public void setInt(int pos, int value) throws SQLException {
-        batch(pos, new Integer(value));
+        batch(pos, Integer.valueOf(value));
     }
 
     /** @see java.sql.PreparedStatement#setLong(int, long) */
     public void setLong(int pos, long value) throws SQLException {
-        batch(pos, new Long(value));
+        batch(pos, Long.valueOf(value));
     }
 
     /** @see java.sql.PreparedStatement#setNull(int, int) */
@@ -351,7 +351,7 @@ public abstract class JDBC3PreparedStatement extends CorePreparedStatement {
         } else if (value instanceof Integer) {
             batch(pos, value);
         } else if (value instanceof Short) {
-            batch(pos, new Integer(((Short) value).intValue()));
+            batch(pos, Integer.valueOf(((Short) value).intValue()));
         } else if (value instanceof Float) {
             batch(pos, value);
         } else if (value instanceof Double) {
